[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-admin-openenv"
version = "1.0.0"
description = "SQL Admin Environment for OpenEnv Hackathon"
requires-python = ">=3.10"
dependencies = [
    "openenv",
    "pydantic",
    "fastapi",
    "uvicorn"
]

[project.scripts]
server = "server.app:main"
